# bili_up_finder

./: .gitignore  LICENSE  README.md  README_en.md  pyproject.toml
reports/: index.j2
src/bili_up_finder/: __main__.py  assistant.py  auth.json  cli.py  config.py  up_finder.py  web_builder.py
src/bili_up_finder/search_helper/: ai_search_helper.py
src/bili_up_finder/search_helper/system_prompt/: reader.py
src/bili_up_finder/search_helper/system_prompt/latest/: decide_target_video_relevant.txt  decide_user_space_video_relevant.txt  expand_search_query.txt
