[project]
name = "bili_up_finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "openai>=1.93.0",
    "openai-agents>=0.1.0",
    "pytest-playwright>=0.7.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src.bili_up_finder"]